gccida/g1/ix86_expand_epilogue
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_epilogue/src/i386.c:4833:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4396, "ix86_expand_epilogue"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_epilogue/src/i386.c:4938:22: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 2); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_epilogue/src/i386.c:4942:31: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[4], v17); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_epilogue/src/i386.c:4946:22: error: use of undeclared identifier 'machine_mode'
v22 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[4]); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_epilogue/src/i386.c:4952:31: error: use of undeclared identifier 'machine_mode'
v24 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2], v17); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_epilogue/src/i386.c:4972:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4445, "ix86_expand_epilogue"); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_epilogue/src/obj/i386.o] Error 1
